--- a/myShop/app/src/main/res/layout/activity_product.xml
+++ b/myShop/app/src/main/res/layout/activity_product.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/icons"
-    tools:context="com.inducesmile.androidpayexample.ProductActivity">
+    tools:context="ut.ee.cs.myshop.ProductActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
