--- a/myShop/app/src/main/res/layout/activity_splash.xml
+++ b/myShop/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimaryLight"
-    tools:context="com.inducesmile.androidpayexample.SplashActivity">
+    tools:context="ut.ee.cs.myshop.SplashActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
