--- a/myShop/app/src/main/res/layout/activity_checkout.xml
+++ b/myShop/app/src/main/res/layout/activity_checkout.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical"
         android:layout_weight="9">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/checkout_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
