--- a/UBA/app/src/main/res/layout/activity_activityx.xml
+++ b/UBA/app/src/main/res/layout/activity_activityx.xml
@@ -13,62 +13,35 @@
         android:layout_width="101dp"
         android:layout_height="97dp"
         android:layout_marginStart="188dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.868"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_delete" />
 
     <ImageView
-        android:id="@+id/adw"
-        android:layout_width="92dp"
-        android:layout_height="189dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.03"
-        app:srcCompat="@drawable/a2" />
-
-    <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="314dp"
-        android:layout_height="494dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="251dp"
+        android:layout_height="376dp"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:srcCompat="@drawable/a4" />
+        app:layout_constraintVertical_bias="0.352"
+        app:srcCompat="@drawable/macbook2019" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="59dp"
-        android:layout_height="201dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="50dp"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="307dp"
+        android:layout_height="153dp"
+        android:layout_marginTop="211dp"
+        android:text="MacBook Pro Retina 15 Inch 256 GB Flash (SSD) 2.4 Ghz 8 GB (1600 Mhz) - B grade - Refurbished"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintHorizontal_bias="0.254"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adw"
-        app:layout_constraintVertical_bias="0.963"
-        app:srcCompat="@drawable/a2" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="81dp"
-        android:layout_height="213dp"
-        android:layout_marginStart="234dp"
-        android:layout_marginTop="116dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.235"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/image_you_ch"
-        app:layout_constraintVertical_bias="0.965"
-        app:srcCompat="@drawable/a2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
