--- a/UBA/app/src/main/res/layout/activity_activityx.xml
+++ b/UBA/app/src/main/res/layout/activity_activityx.xml
@@ -13,9 +13,9 @@
         android:layout_width="101dp"
         android:layout_height="97dp"
         android:layout_marginStart="188dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_delete" />
@@ -35,13 +35,14 @@
         android:id="@+id/textView2"
         android:layout_width="307dp"
         android:layout_height="153dp"
-        android:layout_marginTop="211dp"
         android:text="MacBook Pro Retina 15 Inch 256 GB Flash (SSD) 2.4 Ghz 8 GB (1600 Mhz) - B grade - Refurbished"
+
+        android:textColor="@color/btn_logut_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.254"
+        app:layout_constraintHorizontal_bias="0.259"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
