--- a/UBA/app/src/main/res/layout/activity_main.xml
+++ b/UBA/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="fm.ut.ee.auth.ResetActivity">
+    tools:context=".re">
 
     <EditText
         android:id="@+id/old_email"
