--- a/UBA/app/src/main/res/layout/activity_reset.xml
+++ b/UBA/app/src/main/res/layout/activity_reset.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/colorPrimary"
+    android:background="#FAF9F9"
     android:fitsSystemWindows="true"
-    tools:context="com.tutorial.shourov.auth.fm.tutorial.shourov.auth.ResetActivity">
+    tools:context=".authentification.ResetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,9 +20,9 @@
         <ImageView
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
-            app:srcCompat="@android:drawable/ic_secure"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@drawable/logox" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,8 +30,8 @@
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="#303F9F"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,10 +40,10 @@
             android:gravity="center_horizontal"
             android:padding="@dimen/activity_horizontal_margin"
             android:text="@string/forgot_password_msg"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="14dp" />
 
-        <android.support.design.widget.TextInputLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -51,20 +51,20 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white" />
-        </android.support.design.widget.TextInputLayout>
+                android:textColor="@android:color/black"
+                android:textColorHint="#512DA8" />
+        </RelativeLayout>
 
         <Button
             android:id="@+id/btn_reset_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:background="#FFA000"
             android:text="@string/btn_reset_password"
             android:textColor="@android:color/black" />
 
@@ -87,4 +87,4 @@
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
