--- a/UBA/app/src/main/res/layout/activity_splash.xml
+++ b/UBA/app/src/main/res/layout/activity_splash.xml
@@ -3,36 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#00F0F4C3"
     android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimaryLight"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SplashActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="330dp"
+        android:gravity="center"
         android:orientation="vertical"
-        android:padding="16dp"
-        android:gravity="center">
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/paylogo"
-            android:contentDescription="@string/app_name"/>
+            android:layout_width="234dp"
+            android:layout_height="161dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/logox" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textStyle="italic"
-            android:textSize="13dp"
-            android:text="@string/android_pay"/>
+            android:text="@string/android_pay"
+            android:textSize="18sp"
+            android:textStyle="italic" />
     </LinearLayout>
 
 </RelativeLayout>
