--- a/UBA/app/src/main/res/layout/activity_login.xml
+++ b/UBA/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    tools:context=".authentification.LoginActivity">
+    tools:context=".authentification.Login">
 
     <LinearLayout
         android:layout_width="match_parent"
