--- a/UBA/app/src/main/res/layout/check_layout.xml
+++ b/UBA/app/src/main/res/layout/check_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/_16sdp"
@@ -17,7 +18,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/_15sdp"
             android:text="@string/quantity"
-            android:textColor="@color/colorPrimaryText"
+            android:textColor="@color/btn_logut_bg"
             android:layout_gravity="left"/>
     </LinearLayout>
 
@@ -34,7 +35,7 @@
             android:textSize="@dimen/_15sdp"
             android:textStyle="bold"
             android:text="@string/product_name"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/btn_logut_bg"
             android:layout_gravity="left"/>
     </LinearLayout>
 
@@ -51,7 +52,7 @@
             android:textSize="@dimen/_13sdp"
             android:text="@string/price"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimaryText"
+            android:textColor="@color/btn_logut_bg"
             android:layout_gravity="center"/>
 
         <TextView
